# Pcl-library-and-ROS

./: CMakeLists.txt  README.md  package.xml
src/: Comparacion.cpp  Filtro_SOR.cpp  Leer_Nube.cpp  Molde_comparar.cpp  Molde_malo.cpp  Pass_Through.cpp  Planar_Segmentation.cpp  Submuestreo.cpp  kdtree_search.cpp  msgs_filters.cpp  msgs_filters_getcoef.cpp  pcl_cropbox.cpp  pcl_escalar.cpp  pcl_filtro_sor_final.cpp  pcl_modelcoef.cpp  pcl_submuestreo_final.cpp  pcl_transfor.cpp  projecting.cpp  projection_1.cpp  projection_2.cpp  projection_3.cpp  projection_4.cpp  projection_5.cpp  projection_6.cpp  projection_7.cpp  projection_8.cpp  projection_9.cpp  sumas.cpp  transformacion_plato.cpp
src/launch/: procesamiento-de-nubes.launch
